# GUI-

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  README.md  Untitled  compile.sh  temp.gui
.cache/clangd/index/: Component.cppm.BF53F6D6A96B4BC8.idx  compiler.cppm.DBFE1D9D3576933F.idx  lexer.cppm.4014E933995FC613.idx  main.cpp.584E9543D5BB8B73.idx  parser.cppm.E1CFF87BD8A8F5AB.idx  window.cppm.CF17CF508C94E21F.idx
src/: .main.cpp.swp  main.cpp
src/Compiler/: .code_gen.hpp.swp  .compiler.hpp.swp  .lexer.hpp.swp  .parser.hpp.swp  code_gen.hpp  compiler.cppm  compiler.hpp  lexer.cppm  lexer.hpp  main.cpp  parser.cppm  parser.hpp
src/GUI_Componants/: .Button.hpp.swp  .TextBox.hpp.swp  Button.hpp  CheckBox.hpp  Component.cppm  Slider.hpp  TextBox.hpp  window.cppm  window.hpp
